--- a/templates/faq.html
+++ b/templates/faq.html
@@ -18,7 +18,7 @@
                 ❓ What is Shopidarity?
             </summary>
             <div class="mt-2 text-gray-700">
-                Shopidarity is a solidarity-based shopping tool. You can find and share deals, then team up with others for bulk buying — saving money and building community power.
+                Shopidarity is a solidarity-based shopping tool. You can favourite and rate products, find and share deals, then team up with others for bulk buying — saving money and building community power.
             </div>
         </details>
 
@@ -85,7 +85,11 @@
         		➕ Why should I add products?
         	</summary>
         	<div class="mt-2 text-gray-700">
-        		Adding products helps grow our shared library, making it easier for everyone to find relevant deals and build product groups. By contributing products you care about, you’re seeding a resource that benefits shoppers looking for the same items, enabling better deals, stronger communities, and more collective buying power.
+        		<p class="mb-2">Adding products helps grow our shared library, making it easier for everyone to find relevant deals and build product groups.</p> 
+        		<p class="mb-2">Our barcode scanning tool will direct you to our UPC Lookup service  which has access to millions of products sorted by their upc. If we were to import all of these products it would be expensive, slow our site down and make it harder to find relevant products (each user will have a max 5 Lookups/day at first).</p>
+        		<p class="mb-2">By contributing the products you care about, you’re seeding a resource that benefits shoppers looking for the same items, enabling better deals, stronger communities, and more collective buying power.</p>
+        		<p class="mb-2">Once we have a sufficient catalog of products, Users will be invited to register accounts which will all them to begin favouriting, rating and commenting on all their favourite, and not so favourite products.</p>
+        		<p class="mb-2">The more you indicate your preferences on our system the better it will get at suggesting new products, great deals and folks interested in bulk buying the things you already buy to save money.</p>
         	</div>
         </details>
 
@@ -95,7 +99,9 @@
             </summary>
             <div class="mt-2 text-gray-700">
                 <div class="mb-2">
-                  Deals let people know <strong>WHERE</strong> to find the products they like and <strong>HOW MUCH</strong> they cost.
+                  <p>Adding Deals will become accessible once a User Account is registered.<br/> 
+                  (Admins may register new Accounts <strong>by request only</strong> currently)</p> 
+                  <p>Deals let people know <strong>WHERE</strong> to find the products they like and <strong>HOW MUCH</strong> they cost.</p>
                 </div>
                 <span class="font-bold">You will be able to submit a deal in four ways:</span>
                 <ul class="list-disc ml-5 space-y-1">
@@ -109,19 +115,22 @@
 
         <details class="bg-white p-4 rounded-xl shadow-sm group">
             <summary class="cursor-pointer font-semibold text-lg group-open:text-indigo-600">
-                🛒 What is a Collective Cart?
+                📍 What are product groups?
             </summary>
             <div class="mt-2 text-gray-700">
-                A group order where people buy together to save money. Hosts set a quantity goal and invite others. Once the goal is reached, one big order is placed.
+                Join a local group focused on a specific product. Like like a fan club, but for your favorite products. Get alerts for deals and Collective Carts in your area, and coordinate pickups together.
             </div>
         </details>
 
         <details class="bg-white p-4 rounded-xl shadow-sm group">
             <summary class="cursor-pointer font-semibold text-lg group-open:text-indigo-600">
-                📍 What are product groups?
+                🛒 What is a Collective Cart?
             </summary>
             <div class="mt-2 text-gray-700">
-                Join a local group focused on a specific product. Like like a fan club, but for your favorite products. Get alerts for deals and Collective Carts in your area, and coordinate pickups together.
+                <p class="mb-2">A group order where people buy together to save money. A hosts picks a Deal to form a Collective Cart around. They then set a quantity goal (aka. number of shares), a time limit and invite others.</p>
+                <p class="mb-2">The Host will decide if the Collective Cart is publicly available, or only available to members of some of the groups they belong to.</p>
+                <p class="mb-2">Once the goal is reached, one big order is placed and the Host ensures that everyone recieves their share. Cash, e-transfer or other 3rd party payment systems are recommended for now. (*we are exploring the viability of hosting payments on our system, however that may incur a small fee to cover service costs which could limit potential savings)</p>
+                <p class="mb-2">Participants and Hosts can then rate each other so that we can build a trust-based community of reliable folks that follow through on their promises.</p>
             </div>
         </details>
 
